<resources>
    <string name="app_name">SMZR</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="forgotPassword"><u>¿Olvidaste tu contraseña?</u></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="subtitle_logo">Sistema de Monitoreo de Zonas de Riesgo</string>
    <string name="placeholder_btn_user">Usuario</string>
    <string name="cambiar_contrasena">Cambiar Contraseña</string>
    <string name="contrasena_actual">Contraseña actual</string>
    <string name="ingrese_nueva_contrasena">Ingrese nueva contraseña</string>
    <string name="repita_la_nueva_contrasena">Repita la nueva contraseña</string>
    <string name="contrasena">Contraseña</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="registrate">Regístrate</string>
    <string name="cargando">Cargando. . .</string>
    <string name="siguiente">Siguiente</string>
    <string name="repite_contrasena">Repite Contraseña</string>
    <string name="nombre_de_usuario">Nombre de Usuario</string>
    <string name="nombres">Nombres</string>
    <string name="apellidop">Apellido Paterno</string>
    <string name="n_documento_identidad">N° Documento Identidad</string>
    <string name="selecciona_tu_genero">Selecciona tu género</string>
    <string name="descripcion">Descripción</string>
    <string name="prevencion_covid_19">Prevención COVID - 19</string>
    <string name="fecha_de_registro">Fecha de registro</string>
    <string name="malestar">Malestar</string>
    <string name="confirmar">Confirmar</string>
    <string name="correo_electronico">Correo Electrónico</string>
    <string name="fecha_de_nacimiento">Fecha de Nacimiento</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="completar_registro">Completar Registro</string>
    <string name="question1_form_malestar">1. ¿Durante la última semana ha presentado fiebre? (Temperatura mayor a 36C°)</string>
    <string name="label_respuesta">Respuesta</string>
    <string name="text_resp_no">No</string>
    <string name="text_resp_si">Sí</string>
    <string name="question2_form_malestar">2. ¿Durante la última semana ha presentado tos seca?</string>
    <string name="text_resp_q2_opc1">No presento tos</string>
    <string name="text_resp_q2_opc2">Toso muy poco</string>
    <string name="text_resp_q2_opc3">Toso regularmente</string>
    <string name="text_resp_q2_opc4">Toso con mucha frecuencia</string>
    <string name="question3_form_malestar">3. ¿Durante la última semana, has sentido más cansancio de lo habitual?</string>
    <string name="text_resp_q3_opc1">No presento cansancio</string>
    <string name="text_resp_q3_opc2">Cansancio moderado, puedo realizar mis actividades con normalidad</string>
    <string name="text_resp_q3_opc3">Cansancio mayor habitual, siento un poco más de cansancio que el habitual</string>
    <string name="text_resp_q3_opc4">Cansancio extremo, siento mucha dificultad para realizar mis actividades</string>
    <string name="question4_form_malestar">4. ¿Durante la última semana, ha tenido dificultad para respirar o falta de aire?</string>
    <string name="text_resp_q4_opc1">No presento falta de aire o alguna dificultad</string>
    <string name="text_resp_q4_opc2">Presento dificultad ligera para respirar</string>
    <string name="text_resp_q4_opc3">Por momentos siento que no puedo respirar bien</string>
    <string name="text_resp_q4_opc4">Presento dificultad constante para respirar</string>
    <string name="question5_form_malestar">5. ¿Durante la última semana ha sentido dolor o presión en el pecho?</string>
    <string name="text_resp_q5_opc1">No presento dolor o presion en el pecho.</string>
    <string name="text_resp_q5_opc2">Dolor casual, solo por un momento.</string>
    <string name="text_resp_q5_opc3">Dolor regularmente prolongado.</string>
    <string name="text_resp_q5_opc4">Dolor constante y fuerte.</string>
    <string name="question6_form_malestar">6. ¿Durante la última semana ha sentido dificultades para hablar o movilizarse?</string>
    <string name="question7_form_malestar">7. ¿Durante la última semana ha presentado alguna complicación para mantenerse despierto?</string>
    <string name="question8_form_malestar">8. ¿Durante la última semana ha notado que sus labios o rostro han tomado una tonalidad azulada?</string>
    <string name="question9_form_malestar">9. ¿Durante la última semana, ha sentido molestias o dolores en el cuerpo?</string>
    <string name="text_resp_q9_opc1">No he sentido dolores en el cuerpo</string>
    <string name="text_resp_q9_opc2">Dolor localizado, solo por pequeñas áreas del cuerpo</string>
    <string name="text_resp_q9_opc3">Dolor general muscular e interno</string>
    <string name="question10_form_malestar">10. ¿Durante la última semana, ha sentido dolor de garganta?</string>
    <string name="question11_form_malestar">11. ¿Durante la última semana, ha tenido presentado diarrea?</string>
    <string name="question12_form_malestar">12. ¿Durante la última semana, ha tenido alguna irritación e inflamación en los ojos?</string>
    <string name="question13_form_malestar">13. ¿Durante la última semana, ha sentido dolores de cabeza?</string>
    <string name="text_resp_q13_opc1">No he tenido dolores de cabeza.</string>
    <string name="text_resp_q13_opc2">Dolor de cabeza momentáneo.</string>
    <string name="text_resp_q13_opc3">Dolor de cabeza regularmente prolongado.</string>
    <string name="text_resp_q13_opc4">Dolor de cabeza constante y fuerte.</string>
    <string name="question14_form_malestar">14. ¿Durante la última semana, ha sentido pérdida de olfato o gusto?</string>
    <string name="btn_text_completar_form">Finalizar formulario</string>
    <string name="text_sin_historial_malestar">Aun no tiene datos de malestares, complete el formulario para generar un registro de sus malestares</string>
    <string name="apellidom">Apellido Materno</string>
    <string name="Estado">Estado:</string>
    <string name="edad">Edad:</string>
    <string name="email">Email:</string>
    <string name="genero">Género</string>
    <string name="btn_text_guardar_cambios">Guardar Resultados</string>
    <string name="sistema_de_monitoreo_de_zonas_de_riesgo">Sistema de Monitoreo de Zonas de riesgo</string>
    <string name="recuperar_contrasena">¿Olvidaste tu contraseña?</string>
    <string name="recuperar_text">Para recuperar tu contraseña, ingresa el nombre de usuario registrado en tu cuenta. Te enviaremos un código de recuperación a tu correo electrónico.</string>
    <string name="enviar">Enviar</string>
    <string name="ingresa_codigo">Ingresa el código</string>
    <string name="codigo_recuperacion">Revisa tu correo electrónico, te enviamos un código de recuperación. Ingresalo aquí:</string>
    <string name="codigo">Codigo de recuperación</string>
</resources>
