<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="form3ViewModel"
            type="com.rebrotesolution.smzr_android.viewModels.actualizar_malestar.MalestarForm3ViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/id_scroll_3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.actualizar_malestar.MalestarForm3">

            <TextView
                android:id="@+id/txt_qst_5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="40dp"
                android:text="@string/question5_form_malestar"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/id_rg_5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_qst_5"
                android:onCheckedChanged="@{form3ViewModel::onCustomCheckChanged5}">

                <TextView
                    android:id="@+id/lbl_rdgrp_q5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:text="@string/label_respuesta"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/id_rdbtn_q5_opc1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_resp_q5_opc1"
                    android:layout_marginBottom="10dp"/>

                <RadioButton
                    android:id="@+id/id_rdbtn_q5_opc2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_resp_q5_opc2"
                    android:layout_marginBottom="10dp"/>

                <RadioButton
                    android:id="@+id/id_rdbtn_q5_opc3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_resp_q5_opc3"
                    android:layout_marginBottom="10dp"/>

                <RadioButton
                    android:id="@+id/id_rdbtn_q5_opc4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_resp_q5_opc4"
                    android:layout_marginBottom="10dp"/>
            </RadioGroup>

            <TextView
                android:id="@+id/txt_qst_6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="40dp"
                android:text="@string/question6_form_malestar"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/id_rg_5" />

            <RadioGroup
                android:id="@+id/id_rg_6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_qst_6"
                android:onCheckedChanged="@{form3ViewModel::onCustomCheckChanged6}">

                <TextView
                    android:id="@+id/lbl_rdgrp_q6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:text="@string/label_respuesta"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/id_rdbtn_q6_opc1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_resp_no"
                    android:layout_marginBottom="10dp"/>

                <RadioButton
                    android:id="@+id/id_rdbtn_q6_opc2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_resp_si" />

            </RadioGroup>

            <Button
                android:id="@+id/btn_next_form4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="40dp"
                android:text="@string/siguiente"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/id_rg_6"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:background="@drawable/button_background"
                android:onClick="@{form3ViewModel::continuar}"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>