<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="form1ViewModel"
            type="com.rebrotesolution.smzr_android.viewModels.actualizar_malestar.MalestarForm1ViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/id_scroll_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.actualizar_malestar.MalestarForm1">

            <TextView
                android:id="@+id/txt_qst_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="40dp"
                android:text="@string/question1_form_malestar"
                android:textSize="19sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/id_rg_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="40dp"
                android:onCheckedChanged="@{form1ViewModel::onCustomCheckChanged1}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_qst_1">

                <TextView
                    android:id="@+id/lbl_rdgrp_q1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:text="@string/label_respuesta"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/id_rdbtn_q1_opc1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/text_resp_no"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/id_rdbtn_q1_opc2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_resp_si"
                    android:textSize="16sp" />
            </RadioGroup>

            <TextView
                android:id="@+id/txt_qst_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="40dp"
                android:text="@string/question2_form_malestar"
                android:textSize="19sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/id_rg_1" />

            <RadioGroup
                android:id="@+id/id_rg_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="40dp"
                android:onCheckedChanged="@{form1ViewModel::onCustomCheckChanged2}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_qst_2">

                <TextView
                    android:id="@+id/lbl_rdgrp_q2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:text="@string/label_respuesta"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/id_rdbtn_q2_opc1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/text_resp_q2_opc1"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/id_rdbtn_q2_opc2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/text_resp_q2_opc2"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/id_rdbtn_q2_opc3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/text_resp_q2_opc3"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/id_rdbtn_q2_opc4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_resp_q2_opc4"
                    android:textSize="16sp" />

            </RadioGroup>

            <Button
                android:id="@+id/btn_next_form2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/button_background"
                android:onClick="@{form1ViewModel::continuar}"
                android:text="@string/siguiente"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/id_rg_2"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>